log
Fri 19 Aug 2022 04:35:01 PM UTC: 
 tests:  0|6
total_score: 0/70
5307fce
Fri 19 Aug 2022 04:39:53 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
230e64a
Fri 19 Aug 2022 04:50:21 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:37:11: error: ‘List’ {aka ‘struct List’} has no member named ‘firstList’
   37 |   if(!list->firstList) return NULL;
      |           ^~
list.c:38:19: error: ‘List’ {aka ‘struct List’} has no member named ‘firsList’
   38 | list->current=list->firsList;
      |                   ^~
list.c:39:15: error: ‘List’ {aka ‘struct List’} has no member named ‘firstLista’
   39 |   return (list->firstLista->data);
      |               ^~
list.c:40:1: error: control reaches end of non-void function [-Werror=return-type]
   40 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1e65f24
Fri 19 Aug 2022 04:50:48 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:37:11: error: ‘List’ {aka ‘struct List’} has no member named ‘firstList’
   37 |   if(!list->firstList) return NULL;
      |           ^~
list.c:38:21: error: ‘List’ {aka ‘struct List’} has no member named ‘firsList’
   38 |   list->current=list->firsList;
      |                     ^~
list.c:39:15: error: ‘List’ {aka ‘struct List’} has no member named ‘firstList’
   39 |   return (list->firstList->data);
      |               ^~
list.c:40:1: error: control reaches end of non-void function [-Werror=return-type]
   40 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e67a106
Fri 19 Aug 2022 04:51:52 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:40:1: error: control reaches end of non-void function [-Werror=return-type]
   40 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b3a934b
Fri 19 Aug 2022 04:52:02 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:40:1: error: control reaches end of non-void function [-Werror=return-type]
   40 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1db250d
Fri 19 Aug 2022 04:52:40 PM UTC: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
fd70a23
Fri 19 Aug 2022 04:57:27 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:37:11: error: ‘List’ {aka ‘struct List’} has no member named ‘firstList’
   37 |   if(!list->firstList)
      |           ^~
list.c:39:21: error: ‘List’ {aka ‘struct List’} has no member named ‘firstList’
   39 |   list->current=list->firstList;
      |                     ^~
list.c:40:15: error: ‘List’ {aka ‘struct List’} has no member named ‘firstList’
   40 |   return (list->firstList->data);
      |               ^~
Compilation failed
b0d0b30
Fri 19 Aug 2022 04:58:11 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|5
total_score: 15/70
b015767
Fri 19 Aug 2022 05:00:23 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  2|5
total_score: 15/70
e0ac689
Fri 19 Aug 2022 05:02:04 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
0abd615
Fri 19 Aug 2022 05:04:53 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
d097a75
Fri 19 Aug 2022 05:07:49 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 15/70
3258816
Fri 19 Aug 2022 05:09:10 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
8ebe8e5
Fri 19 Aug 2022 05:09:34 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
b4c5161
Fri 19 Aug 2022 05:09:46 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
3d88983
Fri 19 Aug 2022 05:09:59 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
0fe53c4
Fri 19 Aug 2022 05:13:48 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
b2d178c
Fri 19 Aug 2022 05:14:15 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
3a678af
Fri 19 Aug 2022 05:14:55 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
4f3fef7
Fri 19 Aug 2022 05:15:11 PM UTC: 
 list.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  2|5
total_score: 15/70
720fe46
Fri 19 Aug 2022 05:15:59 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
f7bd64c
Fri 19 Aug 2022 05:19:11 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  6|4
total_score: 25/70
313cf28
Fri 19 Aug 2022 05:21:59 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  6|4
total_score: 25/70
9478189
Fri 19 Aug 2022 05:22:27 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
c070c14
Fri 19 Aug 2022 05:28:15 PM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  9|3
total_score: 35/70
7b94333
Fri 19 Aug 2022 05:29:14 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
f5b4c09
Fri 19 Aug 2022 05:29:46 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:71:7: error: statement with no effect [-Werror=unused-value]
   71 |   list->current;
      |   ~~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d002fe0
Fri 19 Aug 2022 05:30:17 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
9fb9512
Sat 20 Aug 2022 01:10:28 AM UTC: 
 tests:  9|3
total_score: 35/70
6421589
